--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -208,6 +208,26 @@ body {
             display: none;
           }
         }
+
+        &:disabled {
+          opacity: 0.4;
+          border-color: #787878;
+          cursor: default;
+          svg path {
+            fill: #787878;
+          }
+
+          &:hover {
+            background-color: transparent;
+            svg path {
+              fill: #787878;
+            }
+          }
+
+          &:active {
+            transform: none;
+          }
+        }
       }
 
       b {
