fixed pizza item html

--- a/src/scss/components/_full-pizza-block.scss
+++ b/src/scss/components/_full-pizza-block.scss
@@ -12,11 +12,11 @@
     margin-bottom: 20px;
   }
 
-  p {
+  section {
     text-align: left;
     margin: 20px auto;
 
-    h4 {
+    h5 {
       display: inline;
     }
 
