--- a/src/components/filters/popup.module.scss
+++ b/src/components/filters/popup.module.scss
@@ -1,7 +1,8 @@
-@import "../variables";
+@import "../../scss/variables";
 
-.sort {
+.filter {
   position: relative;
+
   &__label {
     display: flex;
     align-items: center;
@@ -14,11 +15,8 @@
       }
     }
 
-    b {
-      margin-right: 8px;
-    }
-
     span {
+      margin-left: 8px;
       color: $orange;
       border-bottom: 1px dashed $orange;
       cursor: pointer;
@@ -27,17 +25,16 @@
 
   &__popup {
     position: absolute;
-    right: 0;
+    width: 160px;
+    left: -20px;
     margin-top: 15px;
+    padding: 10px 0;
     background: #ffffff;
     box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.09);
     border-radius: 10px;
     overflow: hidden;
-    padding: 10px 0;
-    width: 160px;
 
     ul {
-      overflow: hidden;
       li {
         padding: 12px 20px;
         cursor: pointer;
