--- a/src/components/search/Search.module.scss
+++ b/src/components/search/Search.module.scss
@@ -2,11 +2,11 @@
   position: relative;
 
   .input {
+    width: 100%;
     border: 1px solid rgba($color: #000000, $alpha: 0.1);
     border-radius: 10px;
     padding: 12px 20px;
     padding-left: 40px;
-    width: 400px;
     font-size: 16px;
 
     &:focus {
