--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -13,6 +13,12 @@ body {
   margin: 50px auto;
   border-radius: 10px;
   max-width: 1400px;
+
+  @media (max-width: 600px) {
+    width: calc(100vw - 30px);
+    border-radius: 4px;
+    margin: 25px auto;
+  }
 }
 
 .content {
@@ -49,35 +55,18 @@ body {
   }
 
   &__top {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    margin-bottom: 40px;
 
-    // @media (max-width: 1260px) {
-    //   .categories {
-    //     width: 100%;
-    //     overflow-x: scroll;
+    .content__title {
+      margin-top: 0;
+      margin-bottom: 40px;
+    }
 
-    //     ul {
-    //       width: 785px;
-    //     }
-    //   }
-
-    //   .sort {
-    //     padding-left: 20px;
-
-    //     b {
-    //       display: none;
-    //     }
-    //   }
-    // }
-
-    // @media (max-width: 820px) {
-    //   .categories {
-    //     margin-top: 30px;
-    //   }
-    //   flex-direction: column-reverse;
-    // }
+    .content__filters {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
   }
 
   &__full-pizza {
@@ -90,11 +79,21 @@ body {
   width: $container-width;
   margin: 0 auto;
 
+  &--cart-header {
+    width: $container-width;
+    margin: 0 auto;
+  }
+
   &--cart {
     max-width: 820px;
-    margin: 90px auto;
+    margin: 50px auto;
+
     .content__title {
       margin: 0;
+    }
+
+    @media (max-width: 768px) {
+      margin: 25px auto;
     }
   }
   &--full-pizza {
@@ -274,6 +273,57 @@ body {
         }
       }
     }
+
+    @media (max-width: 900px) {
+      grid-template-columns: repeat(6, 1fr);
+      grid-template-rows: repeat(2, 1fr);
+
+      &-link {
+        grid-column: 1 / 6;
+        grid-row: 1;
+      }
+
+      &-price {
+        grid-column: 2 / 4;
+        grid-row: 2;
+      }
+
+      &-count {
+        grid-column: 4 / 6;
+        grid-row: 2;
+      }
+
+      &-remove {
+        grid-column: 6 / 7;
+        grid-row: 1;
+      }
+    }
+
+    @media (max-width: 445px) {
+      grid-template-columns: repeat(6, 1fr);
+      grid-template-rows: repeat(2, 1fr);
+
+      &-link {
+        grid-column: span 6;
+        grid-row: 1;
+      }
+
+      &-price {
+        grid-column: 1 / 3;
+        grid-row: 2;
+      }
+
+      &-count {
+        grid-column: 3 / 6;
+        grid-row: 2;
+        justify-self: center;
+      }
+
+      &-remove {
+        grid-column: 6 / 7;
+        grid-row: 2;
+      }
+    }
   }
 
   &__bottom {
@@ -299,43 +349,27 @@ body {
       justify-content: space-between;
       margin-top: 40px;
 
-      .go-back-btn {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 210px;
-
-        border-color: darken($color: $gray-line, $amount: 10);
-
-        span {
-          color: darken($color: $gray-line, $amount: 20);
-          font-weight: 500;
-          font-weight: 600;
-        }
-
-        &:hover {
-          background-color: darken($color: $gray-line, $amount: 90);
-          border-color: darken($color: $gray-line, $amount: 90);
-
-          span {
-            color: $gray-line;
-          }
-        }
-
-        svg {
-          margin-right: 12px;
-          path {
-            fill: transparent;
-            stroke-width: 2;
-          }
-        }
-      }
-
       .pay-btn {
         font-size: 16px;
         font-weight: 600;
         width: 210px;
         padding: 16px;
+      }
+    }
+
+    @media (max-width: 600px) {
+      margin: 25px 0;
+
+      &-details {
+        flex-direction: column;
+        align-items: center;
+        row-gap: 20px;
+      }
+
+      &-buttons {
+        flex-direction: column-reverse;
+        align-items: center;
+        row-gap: 20px;
       }
     }
   }
