--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -5,20 +5,25 @@
   padding: 40px 0;
 
   .container {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     align-items: center;
-    justify-content: space-between;
 
-    @media (max-width: 645px) {
-      flex-direction: column;
-      .header__logo {
-        margin-bottom: 20px;
-      }
+    @media (max-width: 992px) {
+      grid-template-columns: repeat(6, 1fr);
+      grid-template-rows: repeat(2, 1fr);
+      row-gap: 15px;
+    }
+
+    @media (max-width: 445px) {
+      grid-template-rows: repeat(3, 1fr);
+      row-gap: 10px;
     }
   }
 
   &__logo {
     display: flex;
+    flex-wrap: nowrap;
 
     img {
       margin-right: 15px;
@@ -34,6 +39,93 @@
 
     p {
       color: #7b7b7b;
+    }
+  }
+
+  @media (max-width: 992px) {
+    padding: 25px 0;
+    &__logo {
+      grid-column: 1 / 5;
+      grid-row: 1;
+    }
+    &__search {
+      grid-column: 2 / 6;
+      grid-row: 2;
+    }
+
+    &__cart {
+      grid-column: 5 / 7;
+      grid-row: 1;
+    }
+  }
+
+  @media (max-width: 768px) {
+    padding: 25px 0;
+
+    &__logo {
+      grid-column: 1 / 5;
+      grid-row: 1;
+    }
+    &__search {
+      grid-column: 2 / 6;
+      grid-row: 2;
+    }
+
+    &__cart {
+      grid-column: 5 / 7;
+      grid-row: 1;
+    }
+  }
+
+  @media (max-width: 600px) {
+    padding: 25px 0;
+
+    &__logo {
+      grid-column: span 6;
+      grid-row: 1;
+      justify-self: center;
+    }
+    &__search {
+      grid-column: 1 / 5;
+      grid-row: 2;
+    }
+
+    &__cart {
+      grid-column: 5 / 7;
+      grid-row: 2;
+      a.button--cart span:first-of-type {
+        display: none;
+      }
+
+      .button__delimiter {
+        display: none;
+      }
+    }
+  }
+
+  @media (max-width: 445px) {
+    &__logo {
+      grid-column: span 6;
+      grid-row: 1;
+      justify-self: center;
+    }
+    &__search {
+      grid-column: span 6;
+      grid-row: 2;
+    }
+
+    &__cart {
+      grid-column: span 6;
+      grid-row: 3;
+      justify-self: center;
+
+      a.button--cart span:first-of-type {
+        display: inline;
+      }
+
+      .button__delimiter {
+        display: block;
+      }
     }
   }
 }
